--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,296 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html,
+body
+{
+  height: 100%;
+  background-image: url('/images/bg.jpg');
+  background-repeat: no-repeat;
+  background-color: #03001B;
+  font-family: Arial;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+/* layout */
+.layout {
+  padding-top: 45px;
+  padding-left: 40px;
+  padding-right: 40px;
+  padding-bottom: 45px;
+  display: flex;
+}
+
+.layout .layout-menu {
+  border: solid #e50040 1px;
+  background-color: #0a092f;
+
+}
+
+.layout .layout-content {
+  width: 100%;
+  margin-left:20px;
+  flex-direction: column;
+  display: flex;
+}
+
+.layout .layout-player {
+  height: 100%;
+  min-height: 800px;
+  border: solid #e50040 1px;
+  width: 1210px;
+}
+.layout .layout-videoTitle {
+  min-height: 45px;
+}
+
+/* videoTitle */
+.videoTitle {
+  padding-left: 15px;
+  padding-right: 15px;
+  background-color: #5d002b;
+  height: 45px;
+  line-height: 45px;
+  color:white;
+  font-size: 16px;
+  display: inline-block;
+}
+
+/* player */
+.player {
+  padding-top: 20px;
+  padding-left: 20px;
+  padding-bottom: 210px;
+  position: relative;
+}
+
+.layout-player {
+  background-color: #0a092f;
+}
+
+.player-select {
+  bottom: 45px;
+  position: absolute;
+  right: 0px;
+  margin-right: 10px;
+  color:#fff;
+  display: flex;
+  align-items: center;
+}
+
+.player-select .title {
+  padding-right: 15px;
+}
+.player-select .count {
+  display: inline;
+  width: 30px;
+  height: 30px;
+  line-height: 30px;
+  background-color: #350028;
+  text-align: center;
+  border-left: solid 1px #e50040;
+  border-top: solid 1px #e50040;
+  border-bottom: solid 1px #e50040;
+}
+
+.player-select .controls{
+  display: inline-flex;
+  flex-direction: column;
+}
+.player-select .controls {
+  background-color: #e50040;
+  width: 30px;
+  height: 30px;
+  color: black;
+}
+.player-select .controls .plus {
+  border-bottom: solid 1px #000;
+}
+
+.player-select .controls div {
+  line-height: 14px;
+  text-align: center;
+  font-size: 20px;
+  cursor: pointer;
+}
+.player-select .controls div:hover {
+  color:white;
+}
+/* menu */
+.menu {
+  padding-left: 15px;
+  padding-right: 15px;
+  width: 335px;
+}
+
+.menu .menu-title {
+  color: #e50040;
+  height: 50px;
+  line-height: 50px;
+  font-weight: bold;
+}
+.menu .menu-links {
+  margin-top: 40px;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+/* menuItem */
+.menu-item {
+  width: 155px;
+  overflow: hidden;
+  color: white;
+  font-size: 12px;
+  font-weight: bold;
+  line-height: 14px;
+  margin-bottom: 25px;
+}
+.menu-item:hover, .menu-item.active {
+  color: #e50040;
+}
+.menu-item .preview {
+  height: 90px;
+  border: solid transparent 1px;
+}
+
+.menu-item:hover .preview, .menu-item.active .preview {
+  border: solid #e50040 1px;
+
+}
+
+.menu-item .preview .preview-image {
+  width: 100%;
+  height: 100%;
+  width: 100%;
+}
+
+
+
+
+/* video-js */
+.video-js {
+  width: 1025px;
+  height: 576px;
+}
+
+.video-js .vjs-big-play-button {
+  display: none;
+}
+
+.vjs-has-started .vjs-control-bar {
+  justify-content: flex-end;
+}
+
+.video-js .vjs-control-bar {
+  height: 40px;
+  justify-content: flex-end;
+  display: flex;
+  visibility: visible;
+  opacity: 1;
+  transition: visibility 0.1s, opacity 0.1s;
+}
+
+.vjs-button > .vjs-icon-placeholder:before {
+  line-height: 40px;
+  font-size: 20px;
+}
+
+
+
+
+.vjs-custom-control-bar {
+  position: absolute;
+  top: 100%;
+  left: 0px;
+  width: 100%;
+}
+
+
+.vjs-stripes-control {
+  margin-top: 5px;
+}
+
+#wavesurfer{
+  background-color: #350028;
+}
+
+.video-js .vjs-progress-control {
+  position: relative;
+  top:30px;
+  width: 100%;
+}
+.video-js .vjs-progress-control .vjs-progress-holder {
+  margin: 0px;
+  background: none;
+}
+.video-js .vjs-progress-control:hover .vjs-progress-holder {
+  font-size: 1em;
+}
+.video-js .vjs-time-tooltip {
+  display: none !important;
+}
+.video-js .vjs-progress-control .vjs-mouse-display {
+  display: none !important;
+}
+
+.video-js .vjs-progress-holder .vjs-load-progress {
+  display: none !important;
+}
+
+.vjs-control-text span {
+  display: none !important;
+}
+
+.video-js .vjs-play-progress:after {
+  background-color: #fff;
+  right: -0.5px;
+  width: 1px;
+  position: absolute;
+  z-index: 40;
+  content: '';
+  height: 150px;
+
+}
+
+.video-js .vjs-control.vjs-play-control, .timelineRight, .timelineLeft {
+  position: absolute;
+  width: 4em;
+  margin-right: 50px;
+  height: 100%;
+  right: 50%;
+}
+
+.timelineLeft{
+  width: 10px;
+  margin-right: 90px;
+  text-align: center;
+}
+
+.timelineRight{
+  margin-right: 25px;
+  text-align: center;
+}
+
+.timelineRight:before, .timelineLeft:before{
+  line-height: 41px;
+  font-size: 12px;
+}
+
+.timeline {
+  margin-top: 20px;
+}
+
+.vjs-wave-surfer-control {
+  margin-top: 20px;
+}
+
+.video-js .vjs-volume-panel .vjs-volume-control.vjs-slider-active.vjs-volume-vertical .vjs-volume-bar,
+.video-js .vjs-big-play-button,
+.vjs-flat-skin .vjs-fullscreen-control,
+.vjs-flat-skin .vjs-subtitles-button,
+.video-js.vjs-default-skin.vjs-paused .vjs-big-play-button,
+.vjs-button,
+.vjs-paused:focus,
+.vjs-playing:focus{
+  border: none !important;
+  box-shadow: none !important;
+  outline: none !important;
 }
